<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search_label">Поиск</string>
    <string name="medialibrary_label">Медиатека</string>
    <string name="settings_label">Настройки</string>
    <string name="dark_theme_label">Темная тема</string>
    <string name="share_label">Поделиться приложением</string>
    <string name="support_label">Написать в поддержку</string>
    <string name="user_agreement_label">Пользовательское соглашение</string>
    <string name="course_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="email">yourEmail@ya.ru</string>
    <string name="subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="update_text">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="communication_problems">Проблемы со связью

Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="favorite_tracks_label">Избранные треки</string>
    <string name="playlists_label">Плейлисты</string>
    <string name="library_is_empty">Ваша медиатека пуста</string>
    <string name="no_playlist">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>


    <string name="track_length_label">Длительность</string>
    <string name="album_label">Альбом</string>
    <string name="year_label">Год</string>
    <string name="style_label">Жанр</string>
    <string name="country_label">Страна</string>

    <string name="new_playlist_name">Название*</string>
    <string name="new_playlist_description">Описание</string>
    <string name="new_playlist_button_label">Создать</string>
    <string name="new_playlist_title">Новый плейлист</string>
    <string name="add_track_to_playlist">Добавить в плейлист</string>

    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="finish_creating_a_playlist">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="playlist_created">"Плейлист %s создан"</string>
    <string name="playlist_changed">"Плейлист %s изменён"</string>

    <plurals name="plurals_tracks">
        <item quantity="zero">нет треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <plurals name="plurals_minutes">
        <item quantity="zero">нет минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
    <string name="no_tracks">Нет треков</string>
    <string name="no_description">Нет описания</string>

    <string name="do_you_want_to_delete_track">Хотите удалить трек?</string>
    <string name="yes">да</string>
    <string name="no">нет</string>

    <string name="share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="save">Сохранить</string>
    <string name="want_delete_playlist">Хотите удалить плейлист «%s»?</string>
    <string name="no_tracklist_to_share_in_this_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>

</resources>