<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".settings.ui.SettingsFragment"
    android:theme="@style/Base.Theme.PlaylistMaker"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle">
        <TextView
            style="@style/ToolbarTitleStyle"
            android:text="@string/settings_label" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_text_height"
        android:paddingHorizontal="@dimen/padding_horizontal"
        android:text="@string/dark_theme_label"
        android:textSize="@dimen/medium_text_size"
        app:trackTint="@drawable/track_switch_background"
        app:thumbTint="@drawable/thumb_switch_background"
        />

    <TextView
        android:id="@+id/share_app_list_button"
        android:text="@string/share_label"
        app:drawableEndCompat="@drawable/link"
        style="@style/SettingsListItemStyle" />

    <TextView
        android:id="@+id/write_to_support_list_button"
        android:text="@string/support_label"
        app:drawableEndCompat="@drawable/help"
        style="@style/SettingsListItemStyle" />

    <TextView
        android:id="@+id/user_agreement_list_button"
        android:text="@string/user_agreement_label"
        app:drawableEndCompat="@drawable/arrow_forward"
        style="@style/SettingsListItemStyle"/>

</LinearLayout>