<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/arrow_back"
            android:drawablePadding="12dp"
            android:text="@string/settings_label"
            android:textColor="@color/black"
            android:textSize="26sp" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_text_height"
        android:paddingHorizontal="@dimen/padding_horizontal"
        android:text="@string/dark_theme_label"
        android:textSize="@dimen/settings_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_text_height"
        android:drawableEnd="@drawable/link"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/padding_horizontal"
        android:text="@string/share_label"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_text_height"
        android:drawableEnd="@drawable/help"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/padding_horizontal"
        android:text="@string/support_label"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_text_height"
        android:drawableEnd="@drawable/arrow_forward"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/padding_horizontal"
        android:text="@string/user_agreement_label"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_size" />

</LinearLayout>