<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:theme="@style/Base.Theme.PlaylistMaker"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimaryVariant"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_horizontal"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/app_name"
                android:fontFamily="@font/ys_display_medium"
                android:textFontWeight="500"
                android:textColor="@color/white"
                android:textSize="26sp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="24dp" >

            <Button
                android:id="@+id/search_button"
                app:icon="@drawable/loupe"
                android:text="@string/search_label"
                style="@style/MainActivityButtonStyle"
                />

            <Button
                android:id="@+id/medialibrary_button"
                app:icon="@drawable/note"
                android:text="@string/medialibrary_label"
                style="@style/MainActivityButtonStyle"/>

            <Button
                android:id="@+id/settings_button"
                app:icon="@drawable/gear"
                android:text="@string/settings_label"
                style="@style/MainActivityButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>