<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:nestedScrollingEnabled="false"
    tools:context=".AudioPlayerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="24dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/track_placeholder" />

        <TextView
            android:id="@+id/trackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/cover"
            app:layout_constraintStart_toStartOf="@id/cover"
            app:layout_constraintEnd_toEndOf="@id/cover"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0.0"
            tools:text="Yesterday (Remastered 2009)"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="400"
            android:textSize="22sp"
            android:textColor="?attr/colorOnPrimaryFixedVariant"
            android:lines="1"
            android:ellipsize="end"

            />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/trackName"
            app:layout_constraintStart_toStartOf="@id/cover"
            app:layout_constraintEnd_toEndOf="@id/cover"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0.0"
            tools:text="Yesterday (Remastered 2009)"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="400"
            android:textSize="14sp"
            android:textColor="?attr/colorOnPrimaryFixedVariant"
            android:lines="1"
            android:ellipsize="end"/>

        <ImageView
            android:id="@+id/playPauseButton"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/artistName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/pause_button" />

        <ImageView
            android:id="@+id/collectionButton"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/artistName"
            app:layout_constraintStart_toStartOf="@id/cover"
            app:srcCompat="@drawable/add_collection_button" />

        <ImageView
            android:id="@+id/likeButton"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/artistName"
            app:layout_constraintEnd_toEndOf="@id/cover"
            app:srcCompat="@drawable/like_track_button" />

        <TextView
            android:id="@+id/currentTrackTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/playPauseButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="0:30"
            android:text="0:30"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"
            android:textSize="14sp"
            android:textColor="?attr/colorOnPrimaryFixedVariant" />

        <TextView
            android:id="@+id/trackTimeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="59dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/currentTrackTime"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/track_length_label"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"
            android:textSize="13sp"
            android:textColor="@color/dark_gray" />

        <TextView
            android:id="@+id/trackTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="59dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/currentTrackTime"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="5:35"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"
            android:textSize="13sp"
            android:textColor="?attr/colorOnPrimaryFixedVariant" />

        <TextView
            android:id="@+id/collectionNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/trackTimeLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/album_label"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"
            android:textSize="13sp"
            android:textColor="@color/dark_gray" />

        <TextView
            android:id="@+id/collectionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"


            android:layout_marginStart="6dp"
            app:layout_constraintTop_toBottomOf="@id/trackTimeLabel"
            app:layout_constraintStart_toEndOf="@id/collectionNameLabel"
            app:layout_constraintEnd_toEndOf="@id/trackTime"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="1.0"


            tools:text="Yesterday (Remastered 2009)"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"
            android:textSize="13sp"
            android:textColor="?attr/colorOnPrimaryFixedVariant"
            android:lines="1"
            android:ellipsize="end" />

        <TextView
            android:id="@+id/releaseDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/collectionNameLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/year_label"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"
            android:textSize="13sp"
            android:textColor="@color/dark_gray" />

        <TextView
            android:id="@+id/releaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/collectionNameLabel"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="1965"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"
            android:textSize="13sp"
            android:textColor="?attr/colorOnPrimaryFixedVariant" />

        <TextView
            android:id="@+id/primaryGenreNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/releaseDateLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/style_label"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"
            android:textSize="13sp"
            android:textColor="@color/dark_gray" />

        <TextView
            android:id="@+id/primaryGenreName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="6dp"
            app:layout_constraintStart_toEndOf="@id/collectionNameLabel"
            app:layout_constraintEnd_toEndOf="@id/trackTime"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@id/releaseDateLabel"
            tools:text="Rock"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"
            android:textSize="13sp"
            android:textColor="?attr/colorOnPrimaryFixedVariant"
            android:lines="1"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/countryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/primaryGenreNameLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/country_label"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"
            android:textSize="13sp"
            android:textColor="@color/dark_gray" />

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="6dp"
            app:layout_constraintStart_toEndOf="@id/collectionNameLabel"
            app:layout_constraintEnd_toEndOf="@id/trackTime"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@id/primaryGenreNameLabel"
            tools:text="Великобритания"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"
            android:textSize="13sp"
            android:textColor="?attr/colorOnPrimaryFixedVariant"
            android:lines="1"
            android:ellipsize="end" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>